# Rmpfr

./: ChangeLog  DESCRIPTION  Done  MD5  NAMESPACE  README  README.md  TODO  cleanup  configure  configure.ac  outdated-man+vign.mail  trace-stuff.R
R/: AllClasses.R  Arith.R  Consts.R  Math.R  Summary.R  array.R  as.R  formatHex.R  gmp-convert.R  hjk.R  integrate-Romberg.R  mpfr.R  optimizers.R  special-fun.R  unirootR.R  zzz.R
demo/: 00Index
inst/: NEWS.Rd  check-tools.R
inst/doc/: Maechler_useR_2011-abstr.R  Maechler_useR_2011-abstr.Rnw  Makefile  Rmpfr-pkg.R  Rmpfr-pkg.Rnw  Rmpfr-pkg.bbl  Rmpfr-pkg.blg  Rmpfr.bib  log1mexp-note.R  log1mexp-note.Rnw
inst/doc/2012-Rmpfr-ZurichR/: BinCoef.R  BinCoef.Rnw  BinCoef.tex  DO-present-IT  ETH_praesentation.out  ETH_praesentation.tex  MM-colors.sty  MM-slides.sty  Maechler_Rmpfr.aux  Maechler_Rmpfr.nav  Maechler_Rmpfr.out  Maechler_Rmpfr.pdf.info  Maechler_Rmpfr.snm  Maechler_Rmpfr.tex  Maechler_Rmpfr.toc  Maechler_Rmpfr.vrb  Maechler_RmpfrH.aux  Maechler_RmpfrH.nav  Maechler_RmpfrH.out  Maechler_RmpfrH.snm  Maechler_RmpfrH.toc  Maechler_RmpfrH.vrb  Makefile  RmpfrArith.R  RmpfrArith.Rnw  RmpfrArith.tex  integrateBeta.R  log1exp.R  log1exp.Rnw  log1exp.tex  loglikFrank.R  mmVignette.sty  sumBinC.R  sumBinC.Rnw  sumBinC.tex
inst/doc/2012-Rmpfr-ZurichR/auto/: Maechler_Rmpfr.el  sumBinC.el
man/: Bernoulli.Rd  Bessel_mpfr.Rd  Mnumber-class.Rd  Rmpfr-package.Rd  array_or_vector-class.Rd  asNumeric-methods.Rd  atomicVector-class.Rd  base-copies.Rd  bessel_n.Rd  bind-methods.Rd  chooseMpfr.Rd  distr-etc.Rd  factorialMpfr.Rd  formatHex.Rd  formatMpfr.Rd  fr_ld_expMpfr.Rd  gmp-conversions.Rd  hjkMpfr.Rd  igamma.Rd  integrateR.Rd  is.whole.Rd  log1mexp.Rd  matmult.Rd  mpfr-class.Rd  mpfr-utils.Rd  mpfr.Rd  mpfrArray.Rd  mpfrMatrix-class.Rd  mpfrMatrix-utils.Rd  num2bigq.Rd  optimizeR.Rd  pbetaI.Rd  pmax.Rd  qnormI.Rd  roundMpfr.Rd  sapplyMpfr.Rd  seqMpfr.Rd  special-math.Rd  str.mpfr.Rd  sumBinomMpfr.Rd  (+2 more)
src/: Makevars  Makevars.in  Makevars.win  Ops.c  Rmpfr_utils.h  Summary.c  Syms.h  convert.c  init.c  utils.c
tests/: arith-ex.R  binomial-etc.R  bit-repr.R  bit-repr.Rout.save  create.R  functionals.R  lowlevel.R  matrix-ex.R  special-fun-dgamma.R  special-fun-ex.R  tstHexBin.R
vignettes/: Rmpfr-pkg.Rnw  Rmpfr.bib  log1mexp-note.Rnw  log1mexp.bib
